// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardTile renders correctly with password 1`] = `
<div>
  <a
    class="sc-bdvvtL hVgfSH"
    href="/boards/mockId"
  >
    <div
      class="sc-gsDKAQ bkuMRF"
    >
      <span
        class="material-icons"
      >
        lock_outlined
      </span>
    </div>
    <h4
      class="sc-dkPtRN kUDuei"
    >
      Board name 1
    </h4>
    <p
      class="sc-eCImPb sc-jRQBWg gtDioY cTZnQP"
    >
      1 Jan 2022
    </p>
    <div
      class="sc-hKwDye dodXuz"
    >
      <p
        class="sc-eCImPb gtDioY"
      >
        cardCount
      </p>
      <div
        class="sc-iCfMLu dbydVW"
      >
        <button
          aria-controls="mockId"
          aria-expanded="false"
          aria-haspopup="menu"
          class="sc-furwcr cTVyte"
        >
          <span
            class="material-icons"
          >
            more_horiz
          </span>
        </button>
        <nav
          class="sc-pVTFL fGRbIZ"
          id="mockId"
        >
          <ul
            class="sc-gKclnd ePohWH"
          >
            <li
              class="sc-jrQzAO iMapqG"
            >
              <button
                class="sc-kDTinF lgLknF"
              >
                <span
                  class="material-icons sc-iqseJM dPyznh"
                >
                  lock_outlined
                </span>
                contextMenu.removePassword
              </button>
            </li>
            <li
              class="sc-jrQzAO iMapqG"
            >
              <button
                class="sc-kDTinF lgLknF"
              >
                <span
                  class="material-icons sc-iqseJM dPyznh"
                >
                  delete_outlined
                </span>
                contextMenu.deleteBoard
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </a>
</div>
`;

exports[`BoardTile renders correctly without password 1`] = `
<div>
  <a
    class="sc-bdvvtL hVgfSH"
    href="/boards/mockId"
  >
    <h4
      class="sc-dkPtRN kUDuei"
    >
      Board name 1
    </h4>
    <p
      class="sc-eCImPb sc-jRQBWg gtDioY cTZnQP"
    >
      1 Jan 2022
    </p>
    <div
      class="sc-hKwDye dodXuz"
    >
      <p
        class="sc-eCImPb gtDioY"
      >
        cardCount
      </p>
      <div
        class="sc-iCfMLu dbydVW"
      >
        <button
          aria-controls="mockId"
          aria-expanded="false"
          aria-haspopup="menu"
          class="sc-furwcr cTVyte"
        >
          <span
            class="material-icons"
          >
            more_horiz
          </span>
        </button>
        <nav
          class="sc-pVTFL fGRbIZ"
          id="mockId"
        >
          <ul
            class="sc-gKclnd ePohWH"
          >
            <li
              class="sc-jrQzAO iMapqG"
            >
              <button
                class="sc-kDTinF lgLknF"
              >
                <span
                  class="material-icons sc-iqseJM dPyznh"
                >
                  lock_outlined
                </span>
                contextMenu.setPassword
              </button>
            </li>
            <li
              class="sc-jrQzAO iMapqG"
            >
              <button
                class="sc-kDTinF lgLknF"
              >
                <span
                  class="material-icons sc-iqseJM dPyznh"
                >
                  delete_outlined
                </span>
                contextMenu.deleteBoard
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </a>
</div>
`;
